tests/EtaX/EtaX.meth/EtaX.meth.05.check
// 2.13-base exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// 2.13-head exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// 2.13-new exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// 3.0-old exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// 3.0 exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// 3.1 exitCode: 1   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
-- Error: /d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.05.scala:14:38 
14 |  val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
   |                                 ^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can use `(() => <function>())` instead
1 error found
